src/views/VotingResult/VotingResult.css
/*
 * Copyright (C) 2019 Kaleidos Open Source SL
 *
 * This file is part of Dont Worry Be Happy (DWBH).
 * DWBH is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * DWBH is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with DWBH.  If not, see <https://www.gnu.org/licenses/>.
 */

@import "../../assets/css/mixins.css";

div.hide {
  display: none;
}

.delete-when-graphic {
  color: black;
  font-size: 64px;
  text-align: center;
}

.voting-result {
  color: var(--new-grey-700);
  padding: 0 .5rem;
  width: 100%;

  & .title-container {
    & h1,
    & h2 {
      font-family: 'Merriweather', 'Times New Roman', Times, serif;
    }

    & span {
      color: var(--new-grey-500);
    }
  }

  & .title-container-mobile {
    display: flex;
    flex-direction: column;
    padding-left: .5rem;
    padding-top: 25px;

    @media (--large-viewport) {
      display: none;
    }

    & h1 {
      font-family: 'Merriweather', 'Times New Roman', Times, serif;
      margin: 0;
    }

    & h2 {
      font-family: 'Merriweather', 'Times New Roman', Times, serif;
      margin: 0 0 1rem 0;

      @media (--small-viewport) {
        margin-right: 6rem;
      }

      @media (--medium-viewport) {
        display: none;
      }
    }

    & .row {
      align-items: flex-end;
      margin-bottom: 1rem;
      margin-top: 1rem;

      @media (--small-viewport) {
        align-content: flex-end;
        display: flex;
      }

      @media (--medium-viewport) {
        margin-top: 0;
      }
    }

    & .time {
      display: block;

      @media (--medium-viewport) {
        display: none;
      }
    }
  }

  & .main-container {
    display: flex;
    flex-direction: column;
    padding: 0 .5rem;
    width: 100%;

    @media (--large-viewport) {
      flex-direction: row;
    }
  }

  & .graphic-section {
    display: none;
    min-height: 200px;

    @media (--small-viewport) {
      display: flex;
      flex-direction: column;
      order: 2;
    }

    @media (--large-viewport) {
      flex: 1 1 auto;
      margin-right: 25px;
      order: 1;
    }

    & .graphic-container {
      align-items: center;
      background-image: url(../../assets/img/bg.svg);
      background-position: top center;
      background-repeat: no-repeat;
      display: flex;
      flex: 1 0 auto;
      justify-content: center;
      min-height: 400px;
    }
  }

  & .mood-section {
    display: flex;
    flex-direction: column;
    min-height: 200px;
    order: 1;
    width: 100%;

    @media (--small-viewport) {
      flex-direction: row;
    }

    @media (--large-viewport) {
      flex: 0 0 650px;
      flex-direction: column;
      margin-top: 2rem;
      order: 2;
    }
  }

  & .mood-container {
    display: flex;
    flex-direction: column;
    margin-bottom: 25px;

    @media (--small-viewport) {
      flex: 1 0 225px;
    }

    @media (--medium-viewport) {
      flex-basis: 475px;
      flex-direction: row;
      margin-right: 25px;
    }

    @media (--large-viewport) {
      flex-basis: auto;
      flex-direction: row;
      margin-right: 0;
    }

    & .average-mood {
      flex: 1 1 auto;

      @media (--small-viewport) {
        flex: 1 0 auto;
        margin-bottom: 25px;
      }

      @media (--medium-viewport) {
        flex: 0 0 225px;
        margin-bottom: 0;
        margin-right: 25px;
        padding-right: 0;
      }

      @media (--large-viewport) {
        flex: 1 0 250px;
      }
    }
  }

  & .mood-sorter-section {
    display: flex;
    flex: 1 1 100%;
    flex-direction: column;
    padding-bottom: 25px;

    @media (--small-viewport) {
      margin-left: 25px;
    }

    @media (--large-viewport) {
      margin-left: 0;
    }
  }

  & .participation-container {
    flex: 1 1 auto;

    @media (--small-viewport) {
      flex: 0 1 auto;
    }

    @media (--medium-viewport) {
      flex: 0 0 225px;

      & .button.primary {
        height: 60px;
      }
    }

    @media (--large-viewport) {
      flex: 1 0 350px;
      margin-right: 0;
    }
  }

  & .mobile-vote {
    align-content: center;
    bottom: 1rem;
    display: flex;
    justify-content: center;
    left: 0;
    position: fixed;
    width: 100%;
    z-index: 35;

    @media (--small-viewport) {
      display: none;
    }

    & .primary {
      height: 60px;
      width: 240px;
    }
  }

  & .participation {
    color: var(--new-grey-700);
    font-size: 16px;
    font-weight: 500;
    line-height: 36px;
  }

  & .button.primary {
    margin-top: .7rem;
    min-height: 60px;
    width: 238px;
  }

  & .desktop {
    display: none;

    @media (--small-viewport) {
      display: flex;
    }
  }

  & .title-container-large {
    & h2 {
      display: none;
      font-family: 'Merriweather', 'Times New Roman', Times, serif;
      margin: 0;

      @media (--medium-viewport) {
        display: flex;
      }
    }
  }

  & .title-container-participation {
    padding: 0;

    & h2 {
      display: none;
      font-family: 'Merriweather', 'Times New Roman', Times, serif;
    }

    & .time {
      display: none;

      @media (--medium-viewport) {
        align-items: flex-end;
        display: flex;
        height: 20px;
      }
    }
  }

  & .title-container-full {
    display: none;

    @media (--large-viewport) {
      display: flex;
    }
  }

  & .participation-info {
    color: var(--new-grey-500);
    display: none;

    @media (--small-viewport) {
      display: block;
    }

    @media (--medium-viewport) {
      padding-top: 25px;
    }

    & .row {
      align-content: center;
      display: flex;

      @media (--small-viewport) {
        flex-direction: column;
      }
    }

    & .title {
      font-family: 'Merriweather', 'Times New Roman', Times, serif;
      font-size: 1rem;
      font-style: normal;
      font-weight: normal;
      line-height: 36px;
      padding-right: 2rem;
    }

    & .amount {
      display: fleX;

      & span {
        color: var(--new-grey-700);
        font-size: 2rem;
        font-style: normal;
        font-weight: 300;
        line-height: 36px;
      }
    }

    & .people {
      font-size: 1rem;
      font-style: normal;
      font-weight: 500;
      line-height: 36px;
    }
  }
}

.loading-holder {
  background: rgba(255, 255, 255, .7);
  height: 100%;
  left: 0;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1000;
}

